--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <h1>World Clock</h1>
 
     <footer>
-      This project was coded by Cherry Atkinson and is
-      <a href="#" target="_blank">open-sourced on GitHub</a>
+      This project was coded with ❤ by Cherry Atkinson and is
+      <a href="https://github.com/Lunamoon36/world-clock" target="_blank"
+        >open-sourced on GitHub</a
+      >
     </footer>
     <script src="src/index.js"></script>
   </body>
