--- a/index.html
+++ b/index.html
@@ -7,8 +7,28 @@
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clock</h1>
 
+      <select name="" id="">
+        <option value="">Select a city...</option>
+        <option value="">Lisbon</option>
+        <option value="">London</option>
+        <option value="">Paris</option>
+        <option value="">New York</option>
+      </select>
+    </div>
+
+    <div class="city">
+      <h2>Los Angeles</h2>
+      <div class="date">February 20th 2024</div>
+      <div class="time">13:29</div>
+    </div>
+    <div class="city">
+      <h2>Miami</h2>
+      <div class="date">February 20th 2024</div>
+      <div class="time">13:29</div>
+    </div>
     <footer>
       This project was coded with ❤ by Cherry Atkinson and is
       <a href="https://github.com/Lunamoon36/world-clock" target="_blank"
