--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>World Clock - Cherry Atkinson</title>
+    <title>World Clocks - Cherry Atkinson</title>
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
     <div class="container">
-      <h1>World Clock</h1>
+      <h1>World Clocks</h1>
 
       <select name="" id="">
         <option value="">Select a city...</option>
@@ -17,24 +17,30 @@
         <option value="">Paris</option>
         <option value="">New York</option>
       </select>
+
+      <div class="city">
+        <div>
+          <h2>Los Angeles</h2>
+          <div class="date">February 20th 2024</div>
+        </div>
+        <div class="time">03:20 <small>PM</small></div>
+      </div>
+      <div class="city">
+        <div>
+          <h2>Paris</h2>
+          <div class="date">February 20th 2024</div>
+        </div>
+        <div class="time">03:20 <small>PM</small></div>
+      </div>
     </div>
 
-    <div class="city">
-      <h2>Los Angeles</h2>
-      <div class="date">February 20th 2024</div>
-      <div class="time">13:29</div>
-    </div>
-    <div class="city">
-      <h2>Miami</h2>
-      <div class="date">February 20th 2024</div>
-      <div class="time">13:29</div>
-    </div>
     <footer>
-      This project was coded with ❤ by Cherry Atkinson and is
+      This project was coded with ❤ by <strong>Cherry Atkinson</strong> and is
       <a href="https://github.com/Lunamoon36/world-clock" target="_blank"
         >open-sourced on GitHub</a
       >
     </footer>
+
     <script src="src/index.js"></script>
   </body>
 </html>
