--- a/index.html
+++ b/index.html
@@ -12,27 +12,28 @@
     <div class="container">
       <h1>World Clocks</h1>
 
-      <select name="" id="">
+      <select name="" id="city">
         <option value="">Select a city...</option>
-        <option value="">Lisbon</option>
-        <option value="">London</option>
-        <option value="">Paris</option>
-        <option value="">New York</option>
+        <option value="Europe/Lisbon">Lisbon</option>
+        <option value="Pacific/Auckland">Auckland</option>
+        <option value="Europe/Paris">Paris</option>
+        <option value="America/New_York">New York</option>
       </select>
-
-      <div class="city" id="los-angeles">
-        <div>
-          <h2>Los Angeles</h2>
-          <div class="date"></div>
+      <div id="cities">
+        <div class="city" id="los-angeles">
+          <div>
+            <h2>Los Angeles</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
-      </div>
-      <div class="city" id="paris">
-        <div>
-          <h2>Paris</h2>
-          <div class="date"></div>
+        <div class="city" id="paris">
+          <div>
+            <h2>Paris</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
       </div>
     </div>
 
