--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <option value="Pacific/Auckland">Auckland</option>
         <option value="Europe/Paris">Paris</option>
         <option value="America/New_York">New York</option>
+        <option value="Asia/Bangkok">Bangkok</option>
+        <option value="Europe/London">London</option>
       </select>
       <div id="cities">
         <div class="city" id="los-angeles">
