--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
       <select name="" id="city">
         <option value="">Select a city...</option>
+        <option value="current">My current location</option>
         <option value="Europe/Lisbon">Lisbon</option>
         <option value="Pacific/Auckland">Auckland</option>
         <option value="Europe/Paris">Paris</option>
